# test-python-resolver-error

./: README.md  pyproject.toml
src/flytest/: __init__.py  __main__.py
